# calculator

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
calculator/: __init__.py
calculator/api/v1/: calculator.py
calculator/api/v2/: calculator.py
calculator/core/: exceptions.py  registry.py  response.py  schema.py
calculator/domain/calculator/: models.py  operator.py  registry.py
calculator/domain/calculator/operators/: addition.py  division.py  multiplication.py  subtraction.py
tests/: conftest.py  test_health.py
tests/api/v1/: test_api_v1_calculator.py
tests/api/v2/: test_api_v2_calculator.py
tests/core/: test_core_schema.py
tests/domain/calculator/: test_domain_calculator_models.py
tests/domain/calculator/operators/: test_domain_calculator_operators_addition.py  test_domain_calculator_operators_division.py  test_domain_calculator_operators_multiplication.py  test_domain_calculator_operators_subtraction.py
